Bug 390194- [Proto] Event/Recurrence dialog: Width is too small for all three minimonths;r=philipp

--- a/calendar/prototypes/themes/winstripe/sun-calendar-event-dialog.css
+++ b/calendar/prototypes/themes/winstripe/sun-calendar-event-dialog.css
@@ -264,3 +264,11 @@ toolbar[iconsize="small"] .cal-toolbarbutton-2 {
 }
 #button-importance-high[disabled="true"] {
 }
+
+/*--------------------------------------------------------------------
+ *   Recurrence dialog preview border
+ *-------------------------------------------------------------------*/
+#preview-border {
+    border: none;
+    padding: 0px;
+}
